--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,23 @@
 .right-nav{
   margin-left: 50%;
 }
+
+.slogan{
+  text-align: left;
+}
+
+.slogan h1{
+  color: white;
+  padding-left: 15%;
+  padding-top: 10%;
+}
+.slogan button{
+  background-color: green;
+  color: white;
+  margin-top:1%;
+  border: 5px solid green;
+  margin-left: 15%;
+  padding: 4px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
